# cfscraper

./: .dockerignore  .env.dev  .env.example  .env.prod  .gitignore  BUGS_FIXED.md  Dockerfile  README.md  bug_fixes_summary.md  cfscraper.db  commit-message.txt  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  main.py  pyproject.toml
.augment/rules/: bugfix-rule.md
alembic/: env.py
alembic/versions/: 173c3bda8858_add_performance_indexes_for_jobs_and_.py  81481d6f6f74_initial_migration.py  add_tags_priority_to_jobs.py
app/: main.py
app/api/: __init__.py  routes.py
app/cache/: __init__.py  caching.py  redis_client.py
app/core/: config.py  database.py  exceptions.py  middleware.py  rate_limit_middleware.py  salt_manager.py
app/database/: __init__.py  connection.py
app/models/: job.py  requests.py  responses.py
app/monitoring/: __init__.py  apm.py  error_tracking.py  health.py  logging.py  metrics.py  middleware.py
app/performance/: __init__.py  bottleneck_analyzer.py  profiling.py
app/scrapers/: base.py  cloudscraper_scraper.py  factory.py  selenium_scraper.py
app/security/: __init__.py  audit.py  authentication.py  encryption.py  headers.py  validation.py
cfscraper/: __init__.py  main.py  server.py
docs/: BUGS_FIXED.md  api-cleanup.md  api-documentation-security.md  routes-refactoring.md
examples/: example_usage.py  test_phase1_demo.py  test_phase2_demo.py
load_tests/: locustfile.py  performance_monitor.py  run_tests.py
monitoring/: alert_rules.yml  alertmanager.yml  docker-compose.monitoring.yml  filebeat.yml  prometheus.yml
scripts/: build-docker.sh  test-docker.sh
security/: security-tests.py  vulnerability-scan.yml
tests/: conftest.py  test_api.py  test_data_export.py  test_models.py  test_new_api.py
(+60 files in other folders)
